css/style.css
/* Inspiration https://swabtheworld.com/en/ */


/* Roboto font */
@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Condensed&display=swap');

/* Abril Fatface font */
@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');

/* Monoton font */
@import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');


/* Colour scheme */
:root {
  --green: #5fecc8;
  --blue: #5e62d1;
  --muted-green: #87ccbb;
}

/* CSS reseting */
*, *::before, *::after {
  box-sizing: border-box;
}
* {
  margin: 0;
}
html, body {
  height: 100%;
}
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}
input, button, textarea, select {
  font: inherit;
}
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

a {
  text-decoration: none;
}

a, a:visited, a:hover, a:active {
  color: inherit;
  text-decoration: none;
}

/* Setting up fonts, colours, direction */
body {
  background-color: var(--blue);
  color: var(--green);
  font-size: 14px;
  font-family: 'Roboto', sans-serif;
  height: 100%;
  display: flex;
  flex-direction: column;
}

/* Navigation */
header {
  position: fixed;
  width: 100%;
}

.nav-cont-cont {
  top: 0;
}

.nav-left {
  display: none;
}

.nav-container {
  display: flex;
  justify-content: flex-end;
}

.nav-logo {
  /* font-family: 'Monoton', cursive; */
  font-size: 1.5em;
}

/* Dropdown menu */
/* Inspiration from https://css-tricks.com/the-checkbox-hack/ */
.nav-right {
  margin: 30px;
  margin-left: 320px;
}

.burger-icon {
  font-size: 50px;
}

.close-icon {
  font-size: 50px;
  translate: 7px;
}

.tabs {
  position: relative;
  clear: both;
}

.tab {
  position: relative;
}

.tab [type="radio"] {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  margin: 0;
  z-index: 1;
}

.content {
  position: absolute;
  top: 100%;
  opacity: 0;
  background-color: var(--green);
  left: calc(100% - 150px);
  display: none;
}

.content ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

.content a {
  color: var(--blue);
  display: block;
  white-space: nowrap;
  text-decoration: none;
  padding: 10px 15px;
  width: auto;
  font-size: 30px;
  border: 1px solid var(--green);
  text-align: right;
}

.content a:hover {
  background-color: var(--blue);
  color: var(--green);
  border: 1px dotted var(--green);
}

.close-tab {
  position: absolute;
  z-index: -1;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.close-tab label {
  opacity: 0;
}

[type="radio"]:checked ~ label ~ .close-tab {
  z-index: 3;
}

[type="radio"]:checked ~ label ~ .close-tab label {
  opacity: 1;
}

[type="radio"]:checked ~ label {
  z-index: 2;
  opacity: 0;
}

[type="radio"]:checked ~ label ~ .content {
  z-index: 1;
  opacity: 1;
  display: flex;
}


/* Main body */
main {
  z-index: -1;
}

/* Introductory text */
.intro-container {
  display: flex;
  margin-top: 150px;
}

.intro {
  line-height: 1.2;
}

.hand-emoji {
  display: inline-block;
  animation: wiggle 3s 3;
}

h1 {
  text-align: left;
  color: white;
  font-size: 3em;
  padding: 15px;
}

.bold-text-color {
  color: #5fecc8;
}

/* Text animation */
.text-animation {
  height: 1.2em;
}

.caret {
  border-right: .08em solid var(--green);
  width: 1px;
  height: 1.2em;
  animation: blink-caret 0.5s step-end infinite, 
  caret-type-long 0.5s steps(6, end) forwards 1s,
  caret-delete 0.5s steps(6, end) forwards 2.5s,
  caret-type 0.5s steps(6, end) forwards 3s,
  caret-delete 0.5s steps(6, end) forwards 4.5s,
  caret-type 0.5s steps(6, end) forwards 5s,
  hide-element 0.1s forwards 6s;

}

.sites {
  /* width: fit-content; */
  translate: 0px -100%;
  width: 0px;
  overflow: hidden;
  white-space: nowrap;
  animation: type-long 0.5s steps(6, end) forwards 1s, delete 0.5s steps(6, end) forwards 2.5s;
}

.apps {
  translate: 0px -200%;
  width: 0px;
  overflow: hidden;
  white-space: nowrap;
  animation: type 0.5s steps(6, end) forwards 3s, delete 0.5s steps(6, end) forwards 4.5s;
}

.stuff {
  translate: 0px -300%;
  width: 0px;
  overflow: hidden;
  white-space: nowrap;
  animation: type 0.5s steps(6, end) forwards 5s;
}

@keyframes caret-delete {
  100% {translate: 0px;}
}

@keyframes caret-type {
  100% {translate: 100px;}
}

@keyframes caret-type-long {
  100% {translate: 170px;}
}

@keyframes type {
  0% {width: 0px;}
  100% {width: 100px;}
}

@keyframes type-long {
  0% {width: 0px;}
  100% {width: 170px;}
}

@keyframes delete {
  100% {width: 0px;}
}

@keyframes blink-caret {
  from, to {border-right: .05em solid transparent;}
  50% {border-right: .05em solid var(--green);}
}

@keyframes hide-element {
  100% {opacity: 0;}
}

/* Intro text animation */
h1 p {
  opacity: 0;
}

h1 p:nth-child(1){
  animation: dissolve 1.2s ease-in-out forwards;
}

h1 p:nth-child(2){
  animation: dissolve 0.7s ease-in-out forwards;
}
h1 p:nth-child(3){
  animation: dissolve 2s ease-in-out forwards;
}

/* Links */
.links {
  text-align: end;
  padding-right: 10%;

  color: white;
}

.links div {
  display: flex;
  justify-content: end;
  opacity: 0;
  padding: 10px;
  font-size: 1.7em;
}

.links i {
  font-size: 30px;
  margin-right: 20px;
  align-self: center;
  color: var(--green);
}

.links .projects-link i{
  animation: wiggle 2s 0s ease-in-out infinite;
}

.links .knowme-link i {
  animation: wiggle 3s 1s infinite;
}

.links div:nth-child(1){
  animation: dissolve 1s normal 6s forwards;
}

.links div:nth-child(2){
  animation: dissolve 1s normal 6.5s forwards;
}

@keyframes wiggle {
  0% { transform: rotate(0deg); }
 80% { transform: rotate(0deg); }
 85% { transform: rotate(10deg); }
 95% { transform: rotate(-10deg); }
100% { transform: rotate(0deg); }
}

@keyframes dissolve {
  to {
    opacity: 1;
  }
}

/* Footer */
footer {
  position:fixed;
  width: 100%;
  bottom: 0;
  background-color: #21252c;
}

.acknowledgement {
  color: var(--green);
  font-family: 'Courier New', Courier, monospace;
  font-size: 0.9em;
  height: 2.1em;
  display: flex;
  align-items: center;
  justify-content: center;
}

.coding {
  display: flex;
  background-color: #21252c;
  justify-content: space-between;
  font-family: 'Courier New', Courier, monospace;
  height: 2em;
  border-bottom: 1px solid #5fecc8;
}

.left-code {
  display: flex;
  width: auto;
  margin-left: 10px;
  align-items: center;
}

.left-code div{
  padding: 0 7px;
}

.source-icon {
  width: auto;
  height: 15px;
}

.right-code {
  margin-right: 10px;
  width: fit-content;
  display: flex;
  justify-content: center;
  align-items: center;
}

.right-code div {
  padding: 0 10px;
}




.coding-gif {
  display: none;
  width: 200px;
  height: 300px;
  border-radius: 10px;
  object-fit: cover;
  object-position: 3% 0;
}

/* Joke text for responsive display */
.joke {
  display: none;
  position: relative;
  top: 50%;
  margin: -10px auto;
}

@media only screen and (max-width: 350px) {
  .joke {
    display: block;
  }
  header {
    display: none;
  }
  main {
    display: none;
  }
  footer {
    display: none;
  }
}

/* For tablet */
@media only screen and (min-width: 819px) {
  .intro {

    transform: scale(1.5);
    translate: 60% 300px;
  }
  .nav-right {
    display: none;
  }

  .nav-left {
    display: inline;
  }
}

